--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    -->
     <color name="toolbarDark">#282828</color>
     <color name="toolbarLighterDark">#3D3D3D</color>
-    <color name="primaryColor">#40BCD8</color>
+    <color name="colorAccent">#33B5E5</color>
 </resources>
