--- a/app/src/main/res/layout/activity_budget.xml
+++ b/app/src/main/res/layout/activity_budget.xml
@@ -1,41 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
+<!-- Use DrawerLayout as root container for activity -->
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.wgwong.budgettracker.BudgetActivity"
-    android:id="@+id/coordinator_layout"
-    android:background="@drawable/gradient_1">
+    android:fitsSystemWindows="true">
 
-    <android.support.design.widget.AppBarLayout
+    <!-- main body of screen -->
+    <android.support.design.widget.CoordinatorLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_height="match_parent"
+        tools:context="com.example.wgwong.budgettracker.BudgetActivity"
+        android:id="@+id/coordinator_layout"
+        android:background="@drawable/gradient_1">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+        <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@color/toolbarDark"
-            android:elevation="4dp"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:layout_height="wrap_content"
+            android:theme="@style/AppTheme.AppBarOverlay">
 
-    </android.support.design.widget.AppBarLayout>
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@color/toolbarDark"
+                android:elevation="4dp"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.ActionBar" />
 
-    <include layout="@layout/content_budget" />
+        </android.support.design.widget.AppBarLayout>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/new_transaction_button"
+        <include layout="@layout/content_budget" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/new_transaction_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/fab_margin"
+            android:backgroundTint="@color/toolbarDark"
+            android:tint="@android:color/white"
+            app:borderWidth="0dp"
+            app:elevation="6dp"
+            app:srcCompat="@android:drawable/ic_input_add" />
+    </android.support.design.widget.CoordinatorLayout>
+
+    <!-- contents of drawer -->
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:backgroundTint="@color/toolbarDark"
-        android:tint="@android:color/white"
-        app:borderWidth="0dp"
-        app:elevation="6dp"
-        app:srcCompat="@android:drawable/ic_input_add" />
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:menu="@menu/activity_budget_drawer"/>
 
-</android.support.design.widget.CoordinatorLayout>
+</android.support.v4.widget.DrawerLayout>
