--- a/app/src/main/res/menu/activity_budget_drawer.xml
+++ b/app/src/main/res/menu/activity_budget_drawer.xml
@@ -5,15 +5,15 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_profile"
             android:icon="@drawable/ic_account_box_black_48dp"
             android:title="Profile" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_transactions"
             android:icon="@drawable/ic_account_balance_black_48dp"
             android:title="Transactions" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_trend"
             android:icon="@drawable/ic_trending_up_black_48dp"
             android:title="Weekly Trend" />
         <item
@@ -26,7 +26,7 @@
     <item android:title="Manage">
         <menu>
             <item
-                android:id="@+id/nav_manage"
+                android:id="@+id/nav_settings"
                 android:icon="@drawable/ic_settings_black_48dp"
                 android:title="Settings" />
         </menu>
