fixed crashing issue w/ radiobuttons; persist transactions now

--- a/app/src/main/res/layout/content_budget.xml
+++ b/app/src/main/res/layout/content_budget.xml
@@ -13,6 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:gravity="center"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -25,7 +26,7 @@
             android:fontFamily="@font/pt_sans"
             android:text="Today's Expenses"
             android:textIsSelectable="false"
-            android:textSize="12pt"
+            android:textSize="14pt"
             android:textColor="@android:color/background_light"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -34,13 +35,13 @@
 
         <TextView
             android:id="@+id/daily_balance"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/pt_sans_bold"
             android:gravity="center_horizontal"
             android:text="$00.00"
             android:textIsSelectable="false"
-            android:textSize="18pt"
+            android:textSize="28pt"
             android:textStyle="bold"
             android:textColor="@android:color/background_light"
             app:layout_constraintBottom_toBottomOf="@id/today_expenses_textview"
