transaction activity skeleton

--- a/app/src/main/res/layout/dialog_add_transaction.xml
+++ b/app/src/main/res/layout/dialog_add_transaction.xml
@@ -46,14 +46,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Groceries" />
-            <RadioButton android:id="@+id/radio_shopping"
+            <RadioButton android:id="@+id/radio_retail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Shopping" />
+                android:text="Retail" />
+            <RadioButton android:id="@+id/radio_entertainment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Entertainment" />
             <RadioButton android:id="@+id/radio_transportation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Ground Transportation" />
+                android:text="Transportation" />
             <RadioButton android:id="@+id/radio_travel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -61,11 +65,11 @@
             <RadioButton android:id="@+id/radio_hotel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Hotel and Lodging" />
+                android:text="Hotel/Lodging" />
             <RadioButton android:id="@+id/radio_gas"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Gas Station and Fuel" />
+                android:text="Gas Station/Fuel" />
             <RadioButton android:id="@+id/radio_other"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
