--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,11 @@
     <!--
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+
     -->
     <color name="toolbarDark">#282828</color>
     <color name="toolbarLighterDark">#3D3D3D</color>
     <color name="colorAccent">#33B5E5</color>
+    <color name="colorAccentCompliment">#FF4081</color>
+    <color name="lightGray">#F1F1F1</color>
 </resources>
