--- a/app/src/main/res/layout/content_budget.xml
+++ b/app/src/main/res/layout/content_budget.xml
@@ -35,12 +35,37 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/pt_sans_bold"
             android:gravity="center_horizontal"
-            android:text="@string/empty_balance_hint"
+            android:text="@string/today_balance_placeholder"
             android:textIsSelectable="false"
             android:textSize="28pt"
             android:textStyle="bold"
             android:textColor="@android:color/background_light"
             app:layout_constraintBottom_toBottomOf="@id/today_expenses_textview" />
+
+        <TextView
+            android:id="@+id/budget_remaining_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/pt_sans"
+            android:text="@string/budget_remaining"
+            android:textIsSelectable="false"
+            android:textSize="14pt"
+            android:textColor="@color/toolbarDark"
+            android:layout_marginTop="16dp"/>
+
+        <TextView
+            android:id="@+id/daily_budget"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/pt_sans_bold"
+            android:gravity="center_horizontal"
+            android:text="@string/budget_remaining_placeholder"
+            android:textIsSelectable="false"
+            android:textSize="28pt"
+            android:textStyle="bold"
+            android:textColor="@color/toolbarDark"
+            app:layout_constraintBottom_toBottomOf="@id/today_expenses_textview" />
+
     </LinearLayout>
 
 
