default category for new transactions; can properly go back to budget from transactions screen; minor bug fixes

--- a/app/src/main/res/layout/dialog_add_transaction.xml
+++ b/app/src/main/res/layout/dialog_add_transaction.xml
@@ -41,6 +41,7 @@
             <RadioButton android:id="@+id/radio_dining"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:checked="true"
                 android:text="@string/transaction_category_dining"/>
             <RadioButton android:id="@+id/radio_groceries"
                 android:layout_width="wrap_content"
