--- a/app/src/main/res/menu/activity_budget_drawer.xml
+++ b/app/src/main/res/menu/activity_budget_drawer.xml
@@ -5,9 +5,9 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_profile"
+            android:id="@+id/nav_home"
             android:icon="@drawable/ic_account_box_black_48dp"
-            android:title="Profile" />
+            android:title="Home" />
         <item
             android:id="@+id/nav_transactions"
             android:icon="@drawable/ic_account_balance_black_48dp"
